# trackscan

./: CMakeLists.txt  README.md
settings/: parameters.yml
source/: Control.cpp  Control.h  Detector.cpp  Detector.h  DetectorAux.cpp  DetectorAux.h  MOSAIC.cpp  MOSAIC.h  RANSAC.cpp  RANSAC.h  README.txt  ROIFinder.cpp  ROIFinder.h  Tracker.cpp  Tracker.h  blackmagic_thread.cpp  blackmagic_thread.h  config.h  keypoint_handler.cpp  keypoint_handler.h  keypoint_handler.yml  macros.h  main.cpp  naya.h  nayaActive.cpp  nayaSCV.cpp  nayaSSD.cpp  nayaTempA.cpp  nayaTempB.cpp  pThreadDisplay.cpp  pThreadFeatures.cpp  pThreadStructs.h  show_image.cpp  show_image.hpp  video_fetcher.cpp  video_fetcher.h
source/ferns/: depend.inc  ferns_demo  keypoint.h  model.bmp.tracker_data  pokemon.png.tracker_data  retin.png.detector_data  retin.png.tracker_data  retin_2.png.detector_data
